# python-uv-template

./: README.md  pyproject.toml
.github/workflows/: ci.yml  python-app.yml
src/: main.py
tests/: test_main.py
